--- a/get_assets_dialog.ui
+++ b/get_assets_dialog.ui
@@ -25,15 +25,33 @@
   <property name="windowTitle">
    <string>获取资源</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout" stretch="8,2,1,2,1">
+  <layout class="QVBoxLayout" name="verticalLayout" stretch="3,1,0,1">
    <item>
     <widget class="QGroupBox" name="srcCode">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="title">
       <string>资源代码：</string>
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout_5">
+      <property name="spacing">
+       <number>0</number>
+      </property>
+      <property name="leftMargin">
+       <number>5</number>
+      </property>
       <property name="topMargin">
-       <number>10</number>
+       <number>6</number>
+      </property>
+      <property name="rightMargin">
+       <number>5</number>
+      </property>
+      <property name="bottomMargin">
+       <number>5</number>
       </property>
       <item>
        <widget class="QTextEdit" name="codeText">
@@ -46,7 +64,7 @@
         <property name="minimumSize">
          <size>
           <width>0</width>
-          <height>150</height>
+          <height>100</height>
          </size>
         </property>
         <property name="maximumSize">
@@ -62,6 +80,9 @@
    </item>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_6">
+     <property name="spacing">
+      <number>6</number>
+     </property>
      <item>
       <widget class="QLabel" name="label_2">
        <property name="sizePolicy">
@@ -73,7 +94,7 @@
        <property name="minimumSize">
         <size>
          <width>0</width>
-         <height>0</height>
+         <height>30</height>
         </size>
        </property>
        <property name="maximumSize">
@@ -95,7 +116,7 @@
        <property name="minimumSize">
         <size>
          <width>0</width>
-         <height>50</height>
+         <height>30</height>
         </size>
        </property>
       </widget>
@@ -105,7 +126,7 @@
        <property name="minimumSize">
         <size>
          <width>0</width>
-         <height>50</height>
+         <height>30</height>
         </size>
        </property>
        <property name="text">
@@ -121,7 +142,7 @@
        <property name="minimumSize">
         <size>
          <width>0</width>
-         <height>50</height>
+         <height>30</height>
         </size>
        </property>
        <property name="text">
@@ -170,7 +191,7 @@
        <property name="minimumSize">
         <size>
          <width>150</width>
-         <height>60</height>
+         <height>30</height>
         </size>
        </property>
        <property name="maximumSize">
@@ -208,7 +229,7 @@
        <property name="minimumSize">
         <size>
          <width>150</width>
-         <height>60</height>
+         <height>30</height>
         </size>
        </property>
        <property name="maximumSize">
@@ -236,19 +257,6 @@
       </spacer>
      </item>
     </layout>
-   </item>
-   <item>
-    <spacer name="verticalSpacer_2">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>40</height>
-      </size>
-     </property>
-    </spacer>
    </item>
   </layout>
  </widget>
