--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -710,7 +710,7 @@
      <x>0</x>
      <y>0</y>
      <width>905</width>
-     <height>17</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -753,6 +753,7 @@
     </widget>
     <addaction name="menu_3"/>
     <addaction name="menu_2"/>
+    <addaction name="actionExportMarkdown"/>
     <addaction name="actionRename"/>
     <addaction name="actionCopyHistoryFilePath"/>
     <addaction name="actionClearLog"/>
@@ -921,6 +922,11 @@
    </property>
    <property name="toolTip">
     <string>当前配置</string>
+   </property>
+  </action>
+  <action name="actionExportMarkdown">
+   <property name="text">
+    <string>导出markdwon</string>
    </property>
   </action>
  </widget>
