--- a/modify_conf_dialog.ui
+++ b/modify_conf_dialog.ui
@@ -19,7 +19,7 @@
   <property name="windowTitle">
    <string>配置信息</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout_4" stretch="5,2,0,1">
+  <layout class="QVBoxLayout" name="verticalLayout" stretch="10,5,0,2">
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_10" stretch="3,13">
      <item>
@@ -629,21 +629,9 @@
        <property name="title">
         <string>引用文件</string>
        </property>
-       <layout class="QHBoxLayout" name="horizontalLayout_6" stretch="1,4">
-        <property name="leftMargin">
-         <number>2</number>
-        </property>
-        <property name="topMargin">
-         <number>3</number>
-        </property>
-        <property name="rightMargin">
-         <number>2</number>
-        </property>
-        <property name="bottomMargin">
-         <number>3</number>
-        </property>
-        <item>
-         <layout class="QVBoxLayout" name="verticalLayout_2">
+       <layout class="QFormLayout" name="formLayout">
+        <item row="0" column="0">
+         <layout class="QVBoxLayout" name="verticalLayout_2" stretch="1,1,1,1">
           <item>
            <widget class="QLabel" name="label_2">
             <property name="sizePolicy">
@@ -728,10 +716,38 @@
             </property>
            </widget>
           </item>
+          <item>
+           <widget class="QLabel" name="label_5">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="minimumSize">
+             <size>
+              <width>30</width>
+              <height>0</height>
+             </size>
+            </property>
+            <property name="maximumSize">
+             <size>
+              <width>16777215</width>
+              <height>16777215</height>
+             </size>
+            </property>
+            <property name="text">
+             <string>图标文件</string>
+            </property>
+            <property name="alignment">
+             <set>Qt::AlignCenter</set>
+            </property>
+           </widget>
+          </item>
          </layout>
         </item>
-        <item>
-         <layout class="QVBoxLayout" name="verticalLayout_7" stretch="1,1,1">
+        <item row="0" column="1">
+         <layout class="QVBoxLayout" name="verticalLayout_7" stretch="1,1,1,1">
           <item>
            <layout class="QHBoxLayout" name="horizontalLayout_7" stretch="7,0">
             <item>
@@ -863,6 +879,57 @@
             </item>
             <item>
              <widget class="QToolButton" name="meetingFilePathPtn">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="minimumSize">
+               <size>
+                <width>30</width>
+                <height>30</height>
+               </size>
+              </property>
+              <property name="maximumSize">
+               <size>
+                <width>60</width>
+                <height>60</height>
+               </size>
+              </property>
+              <property name="text">
+               <string>...</string>
+              </property>
+             </widget>
+            </item>
+           </layout>
+          </item>
+          <item>
+           <layout class="QHBoxLayout" name="horizontalLayout_11" stretch="7,0">
+            <item>
+             <widget class="QLineEdit" name="iconFilePathEdit">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="minimumSize">
+               <size>
+                <width>0</width>
+                <height>0</height>
+               </size>
+              </property>
+              <property name="text">
+               <string/>
+              </property>
+              <property name="readOnly">
+               <bool>true</bool>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QToolButton" name="iconFilePathPtn">
               <property name="sizePolicy">
                <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
                 <horstretch>0</horstretch>
