--- a/get_assets_dialog.ui
+++ b/get_assets_dialog.ui
@@ -125,6 +125,9 @@
        <property name="toolTip">
         <string extracomment="用逗号或者空格分割多个名字，不写的话，自动编号"/>
        </property>
+       <property name="text">
+        <string/>
+       </property>
       </widget>
      </item>
      <item>
